fix(build): removes javax flag from launch script as javax is no longer part of JDK as of v 11